--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-debugbar": "^3.13",
+        "laravel-lang/lang": "^15.5",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9"
     },
